overflow width fixed

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -14,6 +14,9 @@
         justify-content: flex-start;
         align-items: center;
         font-size: 1.5rem;
+        @media screen and (max-width: 768px) {
+          font-size: 1.3rem;
+        }
         font-weight: 600;
         svg {
           height: 20px;
